FreeST/test/Programs/InvalidTests/Polymorphism/mainPoly/mainPoly.fst
main : forall a . (Int, a)
main = (5, True)
